Исправил найденные ошибки в приложении
